# ch58x

./: CH58Xxx.svd  CH58Xxx.svd.patch  CH58Xxx.svd.patched  CH58Xxx.yml  Cargo.toml  README.md  device.x  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
example/: Cargo.toml
example/src/: main.rs
hal/: Cargo.toml
hal/src/: lib.rs  pfic.rs  sys.rs  sysclk.rs  usb.rs
src/: adc.rs  critical_section.rs  generated.rs  generic.rs  gpio.rs  lib.rs  pfic.rs  raw.rs  sys.rs  sysclk.rs  usb.rs
src/register/: corecfgr.rs  gintenr.rs  intsyscr.rs  mod.rs
