[workspace]
resolver = "3"
members = ["example"]

[package]
name = "ch58x"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.2", features = ["restore-state-bool"] }
riscv = "0.14"
vcell = "0.1"

embedded-hal = "1.0"

embassy-sync = "0.7"
embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.2"
embassy-usb-driver = "0.2"
