[workspace]
resolver = "3"
members = ["example"]

[package]
name = "ch58x"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = "1.2"
riscv = { version = "0.14", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.15", features = [
    "device",
    "memory",
    "single-hart",
    "no-xie-xip",
    "no-interrupts",
] }
vcell = "0.1"

embedded-hal = "1.0"

embassy-executor = "0.8"
embassy-sync = "0.7"
embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.2"
embassy-usb-driver = "0.2"

[features]
v-trap = ["riscv-rt/v-trap"]

[patch.crates-io]
#riscv = { git = "https://github.com/valaphee/qingke.git" }
#riscv-rt = { git = "https://github.com/valaphee/qingke.git" }
riscv = { path = "../qingke/riscv" }
riscv-rt = { path = "../qingke/riscv-rt" }
