[package]
name = "ch58x-example"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = "0.14"
riscv-rt = "0.15"
ch58x = { path = ".." }

embassy-executor = { version = "0.8", features = [
    "arch-riscv32",
    "executor-thread",
] }
embassy-futures = "0.1"
embassy-time = "0.4"
embassy-usb = "0.5"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
