[package]
name = "ch58x-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2"
riscv = "0.14"
riscv-rt = "0.15"
ch58x = { path = ".." }
fugit = "0.3"

embedded-hal = "1.0"

embassy-sync = "0.7"

embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.2"

embassy-usb-driver = "0.2"
